"find missing file" viewport update problem #66141

Closed
opened 2019-06-26 08:46:55 +02:00 by Massimiliano Puliero · 8 comments

Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-25 23:26, hash: abaf6b106d
Worked: 2.7x

Hi,
Using "find missing file" tool to re assign the path to textures doesn't force Blender to update the viewport.
Reload texture one by one or close & reopen Blender is the only solution.

I also tried to use a script (attached file) to reload the textures but it looks like that if Blender lose the path once it's impossible to refresh the viewport using python.

Thank you

Auto_Reload_Images-Blender_addon-master.zip

Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-25 23:26, hash: `abaf6b106d` Worked: 2.7x Hi, Using "find missing file" tool to re assign the path to textures doesn't force Blender to update the viewport. Reload texture one by one or close & reopen Blender is the only solution. I also tried to use a script (attached file) to reload the textures but it looks like that if Blender lose the path once it's impossible to refresh the viewport using python. Thank you [Auto_Reload_Images-Blender_addon-master.zip](https://archive.blender.org/developer/F7549363/Auto_Reload_Images-Blender_addon-master.zip)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

This doesnt happen in files saved from 2.79 and the (temporary) workaround seems to be to change the image user node' source (e.g. from FILE to SEQUENCE and back...)
Checking...

Can confirm. This doesnt happen in files saved from 2.79 and the (temporary) workaround seems to be to change the image user node' `source` (e.g. from FILE to SEQUENCE and back...) Checking...
Member

This doesnt happen in files saved from 2.79

backflip on above comment.. (was just thinking this because I saved with the image panel open -- see below...)

Instead this seems to be working in files that have been saved with the Image properties displayed in either the Properties Editor Materials Tab or the Node Editors sidebar.
It is not enough to open a file [that has been saved without these panels open] and open the panels up, the file has to be saved with the panels visible... then find missing files works (at least on a single image...)

Weird, checking further...

> This doesnt happen in files saved from 2.79 backflip on above comment.. (was just thinking this because I saved with the image panel open -- see below...) Instead this seems to be working in files that have been saved with the `Image` properties displayed in either the `Properties Editor` `Materials` Tab or the `Node Editors` sidebar. It is not enough to open a file [that has been saved without these panels open] and open the panels up, the file has to be saved with the panels visible... then `find missing files` works (at least on a single image...) Weird, checking further...
Brecht Van Lommel was assigned by Philipp Oeser 2019-06-26 16:53:25 +02:00
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Cant seem to find it in a reasonable time, @brecht: could you take over?

Cant seem to find it in a reasonable time, @brecht: could you take over?

This issue was referenced by 171e0d4283

This issue was referenced by 171e0d428368f171b54b17380c60b972051c4b69

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66141
No description provided.