Fix T66141: missing viewport texture update after find missing files